# Text-Summarizer

./: LICENSE  README.md  pyproject.toml  template.py
